# cookiecutter-sonar

./: .cirrus.yml  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  cookiecutter.json  pyproject.toml  sonar-project.properties
.cirrus/: Dockerfile
.github/workflows/: build.yml  pre-commit.yml  unified-dogfooding.yml  update-license.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.repository_name}}/: .pre-commit-config.yaml  README.md  SECURITY.md
{{cookiecutter.repository_name}}/.github/: CODEOWNERS
{{cookiecutter.repository_name}}/.github/workflows/: build.yml  cloud-checks.yml  pr-cleanup.yml  pre-commit.yml  release.yml  unified-dogfooding.yml
{{cookiecutter.repository_name}}/licenses/: sonarsource.txt
