[tool.poetry]
name = "cookiecutter-sonar"
version = "0.1.0"
description = "Sonar repository template powered by Cookiecutter"
authors = [
  "Julien Carsique <julien.carsique@sonarsource.com>",
]
license = "SonarSource SA"

[[tool.poetry.source]]
name = "repox"
url = "https://repox.jfrog.io/artifactory/api/pypi/sonarsource-pypi/simple"
priority = "default"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cookies = "^0.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-httpserver = "^1.0.8"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-mock = "^3.11.1"

[tool.pytest.ini_options]
log_cli = true
minversion = "6.0"
addopts = """
  --cov-report html:build/coverage-html
  --cov-report xml:build/coverage.xml
  --cov-report term
  --cov=hooks
  --cov-branch
"""
testpaths = ["tests"]
